--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -9,10 +9,14 @@
 [autoplace-control-name]
 
 [mod-setting-name]
-SE-vanilla-science-tree-reset-activated=Vanilla science tree reset activated
+SE-vanilla-science-tree-reset-activated=Vanilla science tree reset activated.
+SE-vanilla-science-tree-reset-normal=Vanilla science tree reset normal values.
+SE-vanilla-science-tree-reset-expensive=Vanilla science tree reset expensive values.
 
 [mod-setting-description]
 SE-vanilla-science-tree-reset-activated=Activate or déactivate Vanilla science tree reset over Space Exploration
+SE-vanilla-science-tree-reset-normal=Activate or déactivate Vanilla science tree reset over Space Exploration for normal values.
+SE-vanilla-science-tree-reset-expensive=Activate or déactivate Vanilla science tree reset over Space Exploration for expensive values.
 
 [string-mod-setting]
 #<setting-name>-<dropdown-item-name>=<translated dropdown item>
