--- a/locale/fr/config.cfg
+++ b/locale/fr/config.cfg
@@ -9,15 +9,15 @@
 [autoplace-control-name]
 
 [mod-setting-name]
-SE-vanilla-science-tree-reset-activated=Restauration de l''arbre de recherche Vanilla activé.
-SE-vanilla-science-tree-reset-normal=Restauration de l''arbre de recherche Vanilla valeurs normales.
-SE-vanilla-science-tree-reset-expensive=Restauration de l''arbre de recherche Vanilla valeurs expensive.
-
+SE-vanilla-science-tree-reset-activated=Restauration de l'arbre de recherche Vanilla activé.
+SE-vanilla-science-tree-reset-normal=Restauration de l'arbre de recherche Vanilla valeurs normales.
+SE-vanilla-science-tree-reset-expensive=Restauration de l'arbre de recherche Vanilla valeurs expensive.
+SE-vanilla-science-tree-reset-old-icons=Restauration des icones de l'arbre de recherche Vanilla.
 [mod-setting-description]
 SE-vanilla-science-tree-reset-activated=Active ou désactive la restauration de l''arbre de recherche Vanilla sur Space Exploration.
 SE-vanilla-science-tree-reset-normal=Active ou désactive la restauration de l''arbre de recherche Vanilla sur Space Exploration pour les valeurs normales.
 SE-vanilla-science-tree-reset-expensive=Active ou désactive la restauration de l''arbre de recherche Vanilla sur Space Exploration pour les valeurs expensives.
-
+SE-vanilla-science-tree-reset-old-icons=Active ou désactive la restauration des icones de l'arbre de recherche Vanilla sur Space Exploration.
 [string-mod-setting]
 #<setting-name>-<dropdown-item-name>=<translated dropdown item>
 #my-mod-string-test-setting-item-1=Item 1 localized string
