--- a/locale/en/config.cfg
+++ b/locale/en/config.cfg
@@ -12,11 +12,13 @@
 SE-vanilla-science-tree-reset-activated=Vanilla science tree reset activated.
 SE-vanilla-science-tree-reset-normal=Vanilla science tree reset normal values.
 SE-vanilla-science-tree-reset-expensive=Vanilla science tree reset expensive values.
+SE-vanilla-science-tree-reset-old-icons=Vanilla science tree reset old icons.
 
 [mod-setting-description]
-SE-vanilla-science-tree-reset-activated=Activate or déactivate Vanilla science tree reset over Space Exploration
-SE-vanilla-science-tree-reset-normal=Activate or déactivate Vanilla science tree reset over Space Exploration for normal values.
-SE-vanilla-science-tree-reset-expensive=Activate or déactivate Vanilla science tree reset over Space Exploration for expensive values.
+SE-vanilla-science-tree-reset-activated=Activate or desactivate Vanilla science tree reset over Space Exploration
+SE-vanilla-science-tree-reset-normal=Activate or desactivate Vanilla science tree reset over Space Exploration for normal values.
+SE-vanilla-science-tree-reset-expensive=Activate or desactivate Vanilla science tree reset over Space Exploration for expensive values.
+SE-vanilla-science-tree-reset-old-icons=Activate or desactivate Vanilla science tree reset icon over Space Exploration
 
 [string-mod-setting]
 #<setting-name>-<dropdown-item-name>=<translated dropdown item>
